<resources>
    <string name="app_name">Watcher</string>
    <string name="title_recent">Recent</string>
    <string name="title_alphabetical">Alphabetical</string>
    <string name="title_rarity">Rarity</string>
    <string name="dialog_insert_species">Species cannot be empty</string>
    <string name="input_bird_info">Input bird info</string>
    <string name="species">Species</string>
    <string name="notes">Notes</string>
    <string name="save_as_new_bird">Save as new bird</string>
    <string name="cancel">Cancel</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>

    <string-array name="bird_rarities">
        <item>1. Common</item>
        <item>2. Uncommon</item>
        <item>3. Rare</item>
        <item>4. Ultra Rare</item>
        <item>5. Legendary</item>
    </string-array>
</resources>
